syntax = "proto3";
package messages;
option csharp_namespace = "Messages";
import "Proto.Actor/Protos.proto";

message Start {}
message StartRemote {
    actor.PID Sender = 1;
}
message Ping {}
message CachedPing {}
message Pong {}
message CachedPong {}
